@@ -13,6 +13,7 @@
 - Fixed server crash caused by heap corruption in MS SQL and DB/2 database drivers
 - Agent parameters for monitoring System V message queues
 - New action User.ChangePassword in WINNT subagent
+- Text2reach SMS driver improved
 - Management console:
 	- Fixed grid issues in network maps
 	- Fixed object selection issues in network maps
